Changes

0.07
     - Allow specifying files in addition to directories.

0.06
     - Remove dep on File::Slurp
     - Added manifest option

0.05
     - Use File::Find instead of File::Finder
     - skip .git directory, like .svn and CSV

0.04 - Thu 12 Mar 2009 22:51:51 GMT
     - Added copyright info

0.03 - Wed Jun 11 19:24:59 BST 2008
     - version bump to release to CPAN§

0.02_01 - Tue, 10 Jun 2008 15:11:01 -0400 dmo
	- allow list of directory names to be specified in 'where' argument
	- add 'filename_match' argument to filter for desired filenames

0.02 - switched to makemaker
       changed tests to give better errors
       filter out CVS and Subversion files from those tested
