@@ -1,0 +1,36 @@
+name = Test-Fixme
+version = 0.07
+author = Graham Ollis <plicease@cpan.org>
+license = Perl_5
+copyright_holder = Edmund von der Burg <evdb@ecclestoad.co.uk>, Graham Ollis <plicease@cpan.org>
+
+[GatherDir]
+[MetaYAML]
+[MetaJSON]
+[MakeMaker]
+[Manifest]
+
+[Prereqs]
+Carp                = 0
+ExtUtils::MakeMaker = 0
+File::Find          = 0
+Test::Builder       = 0
+Test::More          = 0
+
+[PruneCruft]
+[License]
+[OurPkgVersion]
+
+[ReadmeAnyFromPod]
+type     = text
+filename = README
+location = build
+
+[ReadmeAnyFromPod / ReadMePodInRoot]
+type     = pod
+filename = README.pod
+location = root
+
+[NextRelease]
+
+[UploadToCPAN]
