@@ -1,4 +1,7 @@
-Changes
+Revision history for Test-Fixme
+
+{{$NEXT}}
+  - Converted distribution to Dist::Zilla
 
 0.07
      - Allow specifying files in addition to directories.
